reports (cliente em atraso, saldo clientes, Produto em baixa, produto estoque)

--- a/app/src/main/res/layout/recycler_view_item_report.xml
+++ b/app/src/main/res/layout/recycler_view_item_report.xml
@@ -8,6 +8,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:textSize="16sp"
         android:text="Description"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,10 +21,17 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="valor"
+        android:textSize="16sp"
         android:gravity="end"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewDescricao"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/cinza_padrao_android"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
