--- a/app/src/main/res/layout/content_registrar_debito_pagamento_meio.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento_meio.xml
@@ -5,7 +5,20 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="60dp"
+        android:padding="16dp"
+        android:orientation="vertical"
         android:background="@android:color/white">
+
+    <TextView
+        android:id="@+id/textViewTipoPagamentoLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/label_meio_pagamento"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="16dp"/>
 
     <ListView
             android:id="@+id/listViewMeioPagamento"
