--- a/app/src/main/res/layout/content_registrar_debito_pagamento_parcelamento.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento_parcelamento.xml
@@ -26,6 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="50dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewTipoPagamentoLabel" />
 
 
