--- a/app/src/main/res/layout/content_registrar_debito_tipo_pagamento.xml
+++ b/app/src/main/res/layout/content_registrar_debito_tipo_pagamento.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:padding="16dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="60dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="50dp"
+    android:layout_marginBottom="60dp"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-            android:id="@+id/textViewTipoPagamentoLabel"
+        android:id="@+id/textViewTipoPagamentoLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/label_tipo_pagamento"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutOpcoes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonPagAvista"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/label_tipo_pagamento"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayoutOpcoes"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp" />
+            android:backgroundTint="@color/secondaryColor"
+            android:tag="selecionado"
+            android:text="@string/label_tipo_pag_a_vista"
+            android:textStyle="bold" />
 
-    <LinearLayout android:id="@+id/linearLayoutOpcoes"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonPagPrazo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
-
-        <Button
-                android:id="@+id/buttonPagAvista"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryColor"
-                android:tag="selecionado"
-                android:layout_margin="4dp"
-                android:text="@string/label_tipo_pag_a_vista"
-                android:textStyle="bold" />
-
-        <Button
-                android:id="@+id/buttonPagPrazo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:background="@color/secondaryColor"
-                android:text="@string/label_tipo_pag_prazo"
-                android:textStyle="bold" />
+            android:backgroundTint="@color/secondaryColor"
+            android:text="@string/label_tipo_pag_prazo"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
